# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  game_calc.py  game_even.py  games_logic.py  greetings.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
