[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Five short arithmetic games: brain-even, brain-calc, brain-gcd, vrain-progression, brain-prime"
authors = ["Sergey R <topgoods687@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},]
repository = "https://github.com/sergey-royt/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
